samples/_failures_safe/1761076602_903575_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_692ec905.c: In function ‘main’:
./samples/SAFE/__tmp_692ec905.c:163:9: error: expected declaration or statement at end of input
  163 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_692ec905.c:163:9: error: expected declaration or statement at end of input
